force-app/main/default/objects/ht_License__c/fields/ht_AllLOAsMatchedToProduct__c.field-meta.xml
<CustomField>
    <fullName>ht_AllLOAsMatchedToProduct__c</fullName>
    <formula>ht_NumberOfProductNotMatchedLOAs__c &lt;= 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All LOAs Matched To Product</label>
    <type>Checkbox</type>
</CustomField>