force-app/main/default/objects/ht_License__c/fields/ht_CeEndDate__c.field-meta.xml
<CustomField>
    <fullName>ht_CeEndDate__c</fullName>
    <label>CE End Date</label>
    <type>Date</type>
</CustomField>