force-app/main/default/objects/ht_License__c/fields/ht_CEStartDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_CEStartDate__c</fullName>
    <label>CE Start Date</label>
    <type>Date</type>
</CustomField>