force-app/main/default/objects/ht_License__c/fields/ht_CEStateOrProvince_Code__c.field-meta.xml
<CustomField>
    <fullName>ht_CEStateOrProvince_Code__c</fullName>
    <label>CE State Or Province Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>