force-app/main/default/objects/ht_License__c/fields/ht_CEUnitsRequiredMeasure__c.field-meta.xml
<CustomField>
    <fullName>d4c_CEUnitsRequiredMeasure__c</fullName>
    <label>CE Units Required Measure</label>
    <length>25</length>
    <type>Text</type>
</CustomField>