force-app/main/default/objects/ht_License__c/fields/ht_EndDate__c.field-meta.xml
<CustomField>
    <fullName>ht_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>