force-app/main/default/objects/ht_License__c/fields/ht_IssueDate__c.field-meta.xml
<CustomField>
    <fullName>ht_IssueDate__c</fullName>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>