force-app/main/default/objects/ht_License__c/fields/ht_License_Products__c.field-meta.xml
<CustomField>
    <fullName>ht_License_Products__c</fullName>
    <label>License Products</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>