force-app/main/default/objects/ht_License__c/fields/ht_LicenseClassCode__c.field-meta.xml
<CustomField>
    <fullName>ht_LicenseClassCode__c</fullName>
    <label>License Class Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>