force-app/main/default/objects/ht_License__c/fields/ht_LicenseClassDescription__c.field-meta.xml
<CustomField>
    <fullName>ht_LicenseClassDescription__c</fullName>
    <label>License Class Description</label>
    <type>TextArea</type>
</CustomField>