force-app/main/default/objects/ht_License__c/fields/ht_LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>ht_LicenseNumber__c</fullName>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>