force-app/main/default/objects/ht_License__c/fields/ht_NumberOfProductMatchedLOAs__c.field-meta.xml
<CustomField>
    <fullName>ht_NumberOfProductMatchedLOAs__c</fullName>
    <label># Of Product Matched LOAs</label>
    <summaryFilterItems>
        <field>ht_LineOfAuthority__c.ht_IsProductMatched__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ht_LineOfAuthority__c.ht_License__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>