force-app/main/default/objects/ht_License__c/fields/ht_NumberOfProductNotMatchedLOAs__c.field-meta.xml
<CustomField>
    <fullName>d4c_NumberOfProductNotMatchedLOAs__c</fullName>
    <label># Of Product Not Matched LOAs</label>
    <summaryFilterItems>
        <field>d4c_LineOfAuthority__c.d4c_IsProductMatched__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>d4c_LineOfAuthority__c.d4c_License__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>