force-app/main/default/objects/ht_License__c/fields/ht_PeriodDuration__c.field-meta.xml
<CustomField>
    <fullName>ht_PeriodDuration__c</fullName>
    <label>Period Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>