force-app/main/default/objects/ht_License__c/fields/ht_QualifyingInsuranceLicenseIndicator__c.field-meta.xml
<CustomField>
    <fullName>d4c_QualifyingInsuranceLicenseIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualifying Insurance License Indicator</label>
    <type>Checkbox</type>
</CustomField>