force-app/main/default/objects/ht_License__c/fields/ht_ResidentLicenseIndicator__c.field-meta.xml
<CustomField>
    <fullName>ht_ResidentLicenseIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resident License Indicator</label>
    <type>Checkbox</type>
</CustomField>