force-app/main/default/objects/ht_License__c/fields/ht_StartDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>