force-app/main/default/objects/ht_License__c/fields/ht_StateOrProvinceName__c.field-meta.xml
<CustomField>
    <fullName>d4c_StateOrProvinceName__c</fullName>
    <label>CE State Or Province Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>