force-app/main/default/objects/ht_License__c/fields/ht_TypeCode__c.field-meta.xml
<CustomField>
    <fullName>ht_TypeCode__c</fullName>
    <label>Type Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>