force-app/main/default/objects/ht_License__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ht_LicenseNumber__c</columns>
    <columns>ht_StatusCode__c</columns>
    <columns>ht_StartDate__c</columns>
    <columns>ht_EndDate__c</columns>
    <columns>ht_StateOrProvinceCode__c</columns>
    <columns>ht_Producer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>